Fixed styling and spacing in the table information, added a border radius to the header of the table so it's more matching to the rest of the styling of all the tds

--- a/MatchFixer-Web-App/wwwroot/css/admin/admin-events-history.css
+++ b/MatchFixer-Web-App/wwwroot/css/admin/admin-events-history.css
@@ -128,6 +128,7 @@
     background: linear-gradient(180deg, #6f42c1, #a855f7);
 }
 
+.event-section p,
 .event-section:last-child {
     margin-bottom: 0;
 }
@@ -201,6 +202,10 @@ background: linear-gradient(90deg, rgba(13,110,253,0.05), transparent);
 
 .admin-events-historical-table > :not(caption) > * > * {
     border: none !important;
+}
+
+.admin-events-historical-table table-light.thead{
+    border-radius: 14px;
 }
 
 .event-row-main {
@@ -359,6 +364,16 @@ tr.collapse.show .admin-event-information {
     z-index: 10 !important;
     background: #f8f9fa !important;
     box-shadow: 0 2px 6px rgba(0,0,0,0.05) !important;
+}
+
+.admin-events-historical-table thead th:first-of-type {
+    border-top-left-radius: 12px !important;
+    border-bottom-left-radius: 12px !important;
+}
+
+.admin-events-historical-table thead th:last-of-type {
+    border-top-right-radius: 12px !important;
+    border-bottom-right-radius: 12px !important;
 }
 
 .table-scroll-container {
